--- a/estilos3.css
+++ b/estilos3.css
@@ -28,7 +28,7 @@ body{
     text-align: center;
 }
 #container .content h2{
-    font-size: 18vw;
+    font-size: 60px;
     columns: #fff;
     line-height: 1em;
     color: #fff;
